--- a/debezium/docker-compose.yml
+++ b/debezium/docker-compose.yml
@@ -17,7 +17,6 @@ services:
       - "8083:8083"
     networks:
       - ProjectHost
-
   register-connector:
     image: curlimages/curl:8.6.0
     depends_on:
@@ -42,15 +41,25 @@ services:
           \"slot.name\": \"debezium\",
           \"publication.autocreate.mode\": \"filtered\",
           \"include.schema.changes\": \"true\",
-          \"tombstones.on.delete\": \"false\",
+
+          \"snapshot.mode\": \"initial\",
           \"decimal.handling.mode\": \"precise\",
           \"time.precision.mode\": \"connect\",
-          \"snapshot.mode\": \"initial\"
+
+          \"tombstones.on.delete\": \"false\",
+          \"delete.handling.mode\": \"rewrite\",
+
+          \"transforms\": \"unwrap\",
+          \"transforms.unwrap.type\": \"io.debezium.transforms.ExtractNewRecordState\",
+          \"transforms.unwrap.drop.tombstones\": \"false\",
+          \"transforms.unwrap.delete.handling.mode\": \"rewrite\",
+          \"transforms.unwrap.add.fields\": \"op,ts_ms\"
         }
       }'
       "
     networks:
       - ProjectHost
+
 
 networks:
   ProjectHost:
