--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 
 services:
   postgres:
+    build: .
     container_name: postgres
     image: my-postgres
     environment:
@@ -11,7 +12,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql
     networks:
       - ProjectHost
 
