--- a/spark/Dockerfile
+++ b/spark/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.12.9-bullseye AS spark-base
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
+
+RUN apt-get update 
+RUN    apt-get install -y --no-install-recommends \
       sudo \
       curl \
       vim \
