--- a/5-clickhouse/docker-compose.yml
+++ b/5-clickhouse/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOOKEEPER_CLIENT_PORT=2181
-    ports:
-      - "12182:2181"
-      - "12888:2888"
-      - "13888:3888"
+    # ports:
+    #   - "12182:2181"
+    #   - "12888:2888"
+    #   - "13888:3888"
     networks:
       - ProjectHost
 
@@ -22,8 +22,8 @@ services:
       - CLICKHOUSE_USER=default
       - CLICKHOUSE_PASSWORD=123456
     ports:
-      - "8002:9000"
-      - "9123:8123"
+      - "19000:9000"
+      - "18123:8123"
     ulimits:
       nproc: 65535
       nofile:
@@ -46,8 +46,6 @@ services:
         wait
       "
 
-
-
   clickhouse2:
     image: sobhanebrahimi/clickhouse:0.1 
     container_name: clickhouse2
@@ -56,8 +54,8 @@ services:
       - CLICKHOUSE_USER=default
       - CLICKHOUSE_PASSWORD=123456
     ports:
-      - "8003:9000"
-      - "9124:8123"
+      - "29000:9000"
+      - "28123:8123"
     ulimits:
       nproc: 65535
       nofile:
