--- a/6-spark/docker-compose.yml
+++ b/6-spark/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
       - HOME=/tmp
-    ports:
-      - "8080:8080"
-      - "7077:7077"
+    # ports:
+    #   - "8080:8080"
+    #   - "7077:7077"
     volumes:
       - ./scripts:/opt/bitnami/spark/scripts
     networks:
