--- a/7-grafana/docker-compose.yml
+++ b/7-grafana/docker-compose.yml
@@ -4,12 +4,14 @@ services:
   grafana:
     image: sobhanebrahimi/grafana:0.1
     container_name: grafana
+    env_file:
+      - .env
     ports:
-      - "3000:3000"
+      - "${GRAFANA_PORT}:3000"
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - GF_PATHS_PROVISIONING=${GF_PATHS_PROVISIONING}
     volumes:
       - ./provisioning:/etc/grafana/provisioning
       - ./dashboards:/var/lib/grafana/dashboards
