--- a/6-spark/docker-compose.yml
+++ b/6-spark/docker-compose.yml
@@ -13,23 +13,46 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=${SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED}
       - SPARK_SSL_ENABLED=${SPARK_SSL_ENABLED}
       - HOME=/tmp
-    # ports:
-    #   - "${SPARK_MASTER_WEBUI_PORT}:8080"
-    #   - "${SPARK_MASTER_PORT}:7077"
+    ports:
+      - "8085:8080"
+      - "7077:7077"
     volumes:
       - ./scripts:/opt/bitnami/spark/scripts
     networks:
       - ProjectHost
 
-  spark-worker:
+  spark-worker1:
     image: sobhanebrahimi/spark:0.1
-    container_name: spark-worker
+    container_name: spark-worker1
     env_file:
       - .env
     environment:
       - SPARK_MODE=${SPARK_MODE_WORKER}
       - SPARK_MASTER_URL=spark://spark-master:${SPARK_MASTER_PORT}
-      - SPARK_WORKER_MEMORY=${SPARK_WORKER_MEMORY}
+      - SPARK_WORKER_MEMORY=${SPARK_WORKER_MEMORY:-4g}
+      - SPARK_WORKER_CORES=${SPARK_WORKER_CORES:-4}
+      - SPARK_RPC_AUTHENTICATION_ENABLED=${SPARK_RPC_AUTHENTICATION_ENABLED}
+      - SPARK_RPC_ENCRYPTION_ENABLED=${SPARK_RPC_ENCRYPTION_ENABLED}
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=${SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED}
+      - SPARK_SSL_ENABLED=${SPARK_SSL_ENABLED}
+      - HOME=/tmp
+    depends_on:
+      - spark-master
+    volumes:
+      - ./scripts:/opt/bitnami/spark/scripts
+    networks:
+      - ProjectHost
+
+  spark-worker2:
+    image: sobhanebrahimi/spark:0.1
+    container_name: spark-worker2
+    env_file:
+      - .env
+    environment:
+      - SPARK_MODE=${SPARK_MODE_WORKER}
+      - SPARK_MASTER_URL=spark://spark-master:${SPARK_MASTER_PORT}
+      - SPARK_WORKER_MEMORY=${SPARK_WORKER_MEMORY:-4g}
+      - SPARK_WORKER_CORES=${SPARK_WORKER_CORES:-4}
       - SPARK_RPC_AUTHENTICATION_ENABLED=${SPARK_RPC_AUTHENTICATION_ENABLED}
       - SPARK_RPC_ENCRYPTION_ENABLED=${SPARK_RPC_ENCRYPTION_ENABLED}
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=${SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED}
@@ -47,7 +70,8 @@ services:
     container_name: pyspark-job-cdc
     depends_on:
       - spark-master
-      - spark-worker
+      - spark-worker1
+      - spark-worker2
     env_file:
       - .env
     environment:
@@ -57,7 +81,15 @@ services:
     command:
       [
         "/opt/bitnami/spark/bin/spark-submit",
-        "/opt/bitnami/spark/scripts/northwind-ch-stg.py"]
+        "--master", "spark://spark-master:${SPARK_MASTER_PORT}",
+        "--driver-memory", "1g",
+        "--executor-memory", "1g",
+        "--conf", "spark.executor.instances=1",
+        "--conf", "spark.executor.cores=2",
+        "--conf", "spark.cores.max=4",
+        "--conf", "spark.sql.shuffle.partitions=10",
+        "/opt/bitnami/spark/scripts/northwind-ch-stg.py"
+      ]
     networks:
       - ProjectHost
 
@@ -66,7 +98,8 @@ services:
     container_name: pyspark-job-dw
     depends_on:
       - spark-master
-      - spark-worker
+      - spark-worker1
+      - spark-worker2
       - pyspark-job-cdc
     env_file:
       - .env
@@ -77,12 +110,18 @@ services:
     command:
       [
         "/opt/bitnami/spark/bin/spark-submit",
-        "/opt/bitnami/spark/scripts/northwind-dw.py"      ]
+        "--master", "spark://spark-master:${SPARK_MASTER_PORT}",
+        "--driver-memory", "1g",
+        "--executor-memory", "1g",
+        "--conf", "spark.executor.instances=1",
+        "--conf", "spark.executor.cores=2",
+        "--conf", "spark.cores.max=4",
+        "--conf", "spark.sql.shuffle.partitions=10",
+        "/opt/bitnami/spark/scripts/northwind-dw.py"
+      ]
     networks:
       - ProjectHost
 
 networks:
   ProjectHost:
     external: true
-
-
