--- a/5-clickhouse/docker-compose.yml
+++ b/5-clickhouse/docker-compose.yml
@@ -50,32 +50,32 @@ services:
         wait
       "
 
-  clickhouse2:
-    image: sobhanebrahimi/clickhouse:0.1 
-    container_name: clickhouse2
-    user: root  # نیاز داریم برای اجرای sudo
-    env_file:
-      - .env
-    environment:
-      - CLICKHOUSE_USER=${CLICKHOUSE_USER}
-      - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD}
-    ports:
-      - "${CLICKHOUSE2_NATIVE_PORT}:9000"
-      - "${CLICKHOUSE2_HTTP_PORT}:8123"
-    ulimits:
-      nproc: 65535
-      nofile:
-        soft: 262144
-        hard: 262144
-    networks:
-      - ProjectHost
-    depends_on:
-      - clickhouse-zookeeper
-    volumes:
-      - type: bind
-        source: ./config_replica2.xml
-        target: /etc/clickhouse-server/config.xml
-      - ./init-db/init.sql:/tmp/init-db/init.sql
+  # clickhouse2:
+  #   image: sobhanebrahimi/clickhouse:0.1 
+  #   container_name: clickhouse2
+  #   user: root 
+  #   env_file:
+  #     - .env
+  #   environment:
+  #     - CLICKHOUSE_USER=${CLICKHOUSE_USER}
+  #     - CLICKHOUSE_PASSWORD=${CLICKHOUSE_PASSWORD}
+  #   ports:
+  #     - "${CLICKHOUSE2_NATIVE_PORT}:9000"
+  #     - "${CLICKHOUSE2_HTTP_PORT}:8123"
+  #   ulimits:
+  #     nproc: 65535
+  #     nofile:
+  #       soft: 262144
+  #       hard: 262144
+  #   networks:
+  #     - ProjectHost
+  #   depends_on:
+  #     - clickhouse-zookeeper
+  #   volumes:
+  #     - type: bind
+  #       source: ./config_replica2.xml
+  #       target: /etc/clickhouse-server/config.xml
+  #     - ./init-db/init.sql:/tmp/init-db/init.sql
 
 networks:
   ProjectHost:
